--- a/DesktopClient/DesktopClient.csproj
+++ b/DesktopClient/DesktopClient.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{CD72C2F1-6B9F-4C0C-BAD1-33509230AE80}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>MonoGameBasicSetupWithNuget</RootNamespace>
+    <RootNamespace>MonoGameBasicSetupWithNuget.DesktopClient</RootNamespace>
     <AssemblyName>MonoGameBasicSetupWithNuget</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
